--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,8 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script src="/js/bundle.js"></script>
+
   </head>
   <body>
     <h1><%= title %></h1>
