import gun and test to store at indexted db

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,11 +8,11 @@
   <body>
     <script src="/bundle.js" async></script>
 
-    <header class="mdc-top-app-bar">
+    <header class="mdc-top-app-bar mdc-top-app-bar--fixed">
       <div class="mdc-top-app-bar__row">
         <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
           <a href="#" class="material-icons mdc-top-app-bar__navigation-icon">menu</a>
-          <span class="mdc-top-app-bar__title">Title</span>
+          <span class="mdc-top-app-bar__title"><%=title%></span>
         </section>
         <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
           <a href="#" class="material-icons mdc-top-app-bar__action-item" aria-label="Download">file_download</a>
@@ -21,11 +21,18 @@
         </section>
       </div>
     </header>
-    <button class="mdc-button">
-      <span class="mdc-button__label">Button</span>
-    </button>
+    <div class="demo-content mdc-drawer-app-content mdc-top-app-bar--fixed-adjust">
+
+
+      <button class="mdc-button">
+        <span class="mdc-button__label">Button</span>
+      </button>
+    </div>
   </body>
 </html>
 
 <script>
+
+
 </script>
+
