delete material design components

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,36 +3,8 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/bundle.css' />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  </head>
-  <body>
     <script src="/bundle.js" async></script>
 
-    <header class="mdc-top-app-bar mdc-top-app-bar--fixed">
-      <div class="mdc-top-app-bar__row">
-        <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
-          <a href="#" class="material-icons mdc-top-app-bar__navigation-icon">menu</a>
-          <span class="mdc-top-app-bar__title"><%=title%></span>
-        </section>
-        <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
-          <a href="#" class="material-icons mdc-top-app-bar__action-item" aria-label="Download">file_download</a>
-          <a href="#" class="material-icons mdc-top-app-bar__action-item" aria-label="Print this page">print</a>
-          <a href="#" class="material-icons mdc-top-app-bar__action-item" aria-label="Bookmark this page">bookmark</a>
-        </section>
-      </div>
-    </header>
-    <div class="demo-content mdc-drawer-app-content mdc-top-app-bar--fixed-adjust">
-
-
-      <button class="mdc-button">
-        <span class="mdc-button__label">Button</span>
-      </button>
-    </div>
-  </body>
+  </head>
+  <body></body>
 </html>
-
-<script>
-
-
-</script>
-
