--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/bundle.css' />
-    <script src="/bundle.js" async></script>
-
-  </head>
-  <body></body>
+    <head>
+        <meta charset="utf-8">
+        <link href="/bundle.css" rel="stylesheet"/>
+        <script src="/bundle.js" async></script>
+        <title><%= title %></title>
+    </head>
+    <body>
+    <div class="container">
+        <h1>DWXR</h1>
+        <p>hey</p>
+    </div>
+    </body>
 </html>
