edit scss files for bootstrap and font awesome

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,4 +1,13 @@
 
+@import '~@fortawesome/fontawesome-free/scss/fontawesome';
+@import '~@fortawesome/fontawesome-free/scss/regular';
+@import '~@fortawesome/fontawesome-free/scss/solid';
+@import '~@fortawesome/fontawesome-free/scss/brands';
+
 @import "./custom";
 @import "~bootstrap/scss/bootstrap";
+
+@import "./components";
+
+
 
