--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding&display=swap');
-
+@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding:400,700&display=swap&subset=korean');
 $font-family-base: 'Nanum Gothic Coding', monospace;
 
 $theme-colors: (
