--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,38 +1,74 @@
 <!DOCTYPE html>
 <html>
     <head>
+
         <meta charset="utf-8">
+        <link rel="apple-touch-icon" sizes="57x57" href="/favicon/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="/favicon/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="/favicon/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="/favicon/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="/favicon/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="/favicon/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="/favicon/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="/favicon/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="/favicon/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="/favicon/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+        <link rel="manifest" href="/favicon/manifest.json">
+        <meta name="msapplication-TileColor" content="#ffffff">
+        <meta name="msapplication-TileImage" content="/favicon/ms-icon-144x144.png">
+        <meta name="theme-color" content="#ffffff">
         <script src="/bundle.js" async></script>
         <link href="/bundle.css" rel="stylesheet" />
         <title><%= title %></title>
     </head>
     <body>
 
+    <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+        <a class="navbar-brand" href="#">
+            <img src="/images/W-1100x1100.png" width="30" height="30" class="d-inline-block align-top" alt="">
+            DWXR
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-sm">
-                <form>
-                    <div class="form-group">
-                        <label for="alias">Username</label>
-                        <input id="alias" type="text" class="form-control"  placeholder="Enter username">
-                        <small id="passHelp" class="form-text text-muted">Your username needs to be longer than 5 letters.</small>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto  my-2 my-lg-0">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Dropdown
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Another action</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Something else here</a>
                     </div>
-                    <div class="form-group">
-                        <label for="pass">Passphrase</label>
-                        <input id="pass" type="password" class="form-control" aria-describedby="passHelp" placeholder="Passphrase">
-                        <small id="passHelp" class="form-text text-muted">Your passphrase needs to be longer than 9 letters.</small>
-                    </div>
-                    <button id="up" type="button" class="btn btn-outline-primary">Sign Up</button>
-                    <button id="in" type="button" class="btn btn-primary">Sign In</button>
-                </form>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                </li>
+            </ul>
+            <div id="sign" class="my-2 my-lg-0">
+                <button id="sign-btn" class="btn btn-outline-primary my-2 my-sm-0">
+                    <i class="fas fa-user-circle"></i> Sign In
+                </button>
             </div>
         </div>
-    </div>
+    </nav>
 
     <div class="container">
         <div class="row">
-            <h2>Space List</h2>
+            <h2>Space List <i class="fas fa-camera"></i></h2>
         </div>
         <div class="row">
             <ul>
@@ -43,11 +79,47 @@
         </div>
     </div>
 
-    <!-- Modal for tell -->
+
+
+<!--    Modal for login-->
+    <div class="modal fade" id="modal-sign" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header bg-primary">
+                    <h5 class="modal-title text-white" >Sign</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="alias">Username</label>
+                            <input id="alias" type="text" class="form-control"  placeholder="Enter username">
+                            <small id="passHelp" class="form-text text-muted">Your username needs to be longer than 5 letters.</small>
+                        </div>
+                        <div class="form-group">
+                            <label for="pass">Passphrase</label>
+                            <input id="pass" type="password" class="form-control" aria-describedby="passHelp" placeholder="Passphrase">
+                            <small id="passHelp" class="form-text text-muted">Your passphrase needs to be longer than 9 letters.</small>
+                        </div>
+                        <button id="up" type="button" class="btn btn-outline-primary">Sign Up</button>
+                        <button id="in" type="button" class="btn btn-primary">Sign In</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+    <!--가장 아래에 Modal for tell -->
     <div class="modal fade" id="tell" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
-                <div class="modal-header">
+                <div class="modal-header bg-danger text-white">
                     <h5 class="modal-title" >DWXR</h5>
                 </div>
                 <div class="modal-body" id="tell-what"></div>
@@ -67,6 +139,12 @@
     // gun.get('root').get('where').put('here');
 
     ;(() => {
+
+        jq('#sign-btn').on('click', (e) => {
+            let m = jq('#modal-sign');
+            m.modal('show')
+        });
+
         jq('#up').on('click', (e) => {
             let form = check();
             if(!form){ return }
@@ -76,11 +154,13 @@
                 S.user.auth(form.alias, form.pass, logined);
             });
         });
+
         jq('#in').on('click', (e) => {
             let form = check();
             if(!form){ return }
             S.user.auth(form.alias, form.pass, logined);
         });
+
 
         let check = () => {
             let form = {alias: (jq('#alias').val()||'').toLowerCase(), pass: jq("#pass").val()||''};
@@ -98,14 +178,31 @@
         let logined = (ack) =>{
             if(ack.err){ return S.tell(ack.err) }
             console.log(ack);
+            jq('#modal-sign').modal('hide');
+            let e = jq('#sign');
+            let alias = S.user.is.alias;
+
+            // let dropdown = ' <div class="dropdown">\n' +
+            //     '                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">\n' +
+            //     '                        <i class="fas fa-user-circle"></i>\n' + alias
+            // '                    </a>\n' +
+            // '                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">\n' +
+            // '                        <a class="dropdown-item" href="#">Action</a>\n' +
+            // '                        <a class="dropdown-item" href="#">Another action</a>\n' +
+            // '                        <div class="dropdown-divider"></div>\n' +
+            // '                        <a class="dropdown-item" href="#">Something else here</a>\n' +
+            // '                    </div>\n' +
+            // '                </div>'
+            // e.html(dropdown);
+
             S.user.recall({sessionStorage: true}); // 세션에 로그인 정보 저장
-            S.tell( 'welcome, '+ S.user.is.alias +'!');
+            S.tell( 'welcome, '+ alias +'!');
+
         }
 
-        // on login
-        S.gun.on('auth', (ack) => {
 
-        });
+
+
     })();
 
 </script>
