--- a/src/scss/components.scss
+++ b/src/scss/components.scss
@@ -1,5 +1,20 @@
 
 
+.scene {
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
+}
+
+.scene-container{
+  z-index: -100;
+  min-height: 100%;
+  height: 100%;
+}
+
+
+
+
 .icon-btn {
   display: inline-block;
   color: $body-color;
